# log_analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  log_config.toml  output.json
src/: ai_client.rs  analytics.rs  app_state.rs  config.rs  export.rs  filtering.rs  history.rs  live.rs  logic.rs  main.rs  models.rs  parser.rs  report.rs  search.rs  search_form.rs  templates.rs  time_parser.rs
src/tui/: chat.rs  components.rs  dashboard.rs  history.rs  layout.rs  mod.rs  report.rs  runner.rs  search_modal.rs  syntax.rs
src/web/: dashboard.html  handlers.rs  server.rs  state.rs
