[package]
name = "log_analysis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
memmap2 = "0.9"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
notify = "8"
toml = "0.8"
once_cell = "1.21.3"

